# hackathon

./: README.md  app.py  index.css
backend/: app.py  main.py  pyproject.toml  requirements.txt
backend/models/: bart_summarizer.py  base_summarizer.py  llama_QA_summarizer.py  main.py  main2.py  t5_summarizer.py
backend/uploads/: 660ecfc8-25ae-4aba-8491-7424deee4528  The_New_Colossus.txt  b798de2f-642c-489c-b882-f799bdcff4b0
frontend/: app.py  index.css  index.html  processing.css  processing.html  result.css  result.html
samples/: Example Spreadsheet.xlsx
src/: main.py  pyproject.toml
src/static/: index.html  processing.html  result.html  style.css
