[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "ollama>=0.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pypdf>=5.1.0",
    "torch>=2.5.1",
    "transformers>=4.46.2",
]
